--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
-    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -45,6 +44,9 @@
   },
   "devDependencies": {
     "bootstrap": "^5.2.3",
+    "express": "^4.18.2",
+    "mongodb": "3.7",
+    "nodemon": "^2.0.22",
     "react-bootstrap": "^2.7.2",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.9.0",
